@startuml

package "Model" {
    class User {
        + Long userId
        + String name
        + List<Task> tasks
    }

    class Task {
        + Long taskId
        + String taskDescription
        + String taskStatus
        + User ownerUser
    }

    User "1" o-- "*" Task
}

package "Repository" {
    interface UserRepository
    interface TaskRepository
}

package "Service" {
    class TaskService
    class UserService
    class AuthService
}

package "Controller" {
    class TaskController
    class UserController
    class AuthController
}

class TaskUpdater

AuthController--> AuthService
UserController --> UserService
TaskController --> TaskService


UserService --> UserRepository
TaskService --> TaskRepository
TaskService --> TaskUpdater 


TaskUpdater --> Task

UserService --> User
TaskService --> Task
@enduml
